syntax = "proto3";

import "google/protobuf/descriptor.proto";
import "entity.feature.service.proto";
import "entity.feature.options.proto";

package entity.feature;

extend google.protobuf.MessageOptions {
  // .
  ApiSpecification api_specification = 3010;
  // .
  AMLSpecification aml_specification = 3011;
}

// Protobuf service generation
message ApiSpecification {
  oneof service {
    service.ServersideEntityCRUD serverside_entity_crud = 1;
    service.ServersideSingletonCRUD serverside_singleton_crud = 2;
  }
}

// AML (Azimutt Markup Language)
// https://azimutt.app/docs/aml
// https://azimutt.app/converters/postgres/to/amlv1
// TODO: генерация сущности по AMLv1
message AMLSpecification {
}
